chore: reduce complexity by not going parallel here
going lazy instead of eager is speedup enough, parallelism does not
bring more benefits here in testing.